--- a/Notebooks/Lyric_NLP__Model.ipynb
+++ b/Notebooks/Lyric_NLP__Model.ipynb
@@ -58,7 +58,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "08xOBcq0MWXI",
-        "outputId": "d64017ff-aa91-46ca-f293-6e011ff65502",
+        "outputId": "e780f93f-94ed-4f94-ef4c-b45ea8f24ec4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -67,12 +67,12 @@
       "source": [
         "url = input('song lyrics url')"
       ],
-      "execution_count": 37,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "song lyrics urlhttps://genius.com/Bring-me-the-horizon-drown-lyrics\n"
+            "song lyrics urlhttps://genius.com/A-day-to-remember-if-it-means-a-lot-to-you-lyrics\n"
           ],
           "name": "stdout"
         }
@@ -87,7 +87,7 @@
         "req = Request(url,headers={'User-Agent': 'Mozilla/5.0'})\n",
         "webpage = urlopen(req).read()"
       ],
-      "execution_count": 38,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "song_json = {}\n",
         "song_json[\"Lyrics\"] = [];"
       ],
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -113,14 +113,14 @@
         "for title in soup.findAll('title'):\n",
         "  song_json[\"Title\"] = title.text.strip()"
       ],
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gb-MI0ZJOlP1",
-        "outputId": "f31af173-520b-4b86-bfe2-84ac278861d0",
+        "outputId": "306034d5-d920-4324-ab79-bd86034df7dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -129,7 +129,7 @@
       "source": [
         "song_json[\"Title\"]"
       ],
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,13 +138,13 @@
               "type": "string"
             },
             "text/plain": [
-              "'Bring\\xa0Me The Horizon – Drown Lyrics | Genius Lyrics'"
+              "'A\\xa0Day To Remember – If It Means a Lot to You Lyrics | Genius Lyrics'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 60
         }
       ]
     },
@@ -157,81 +157,96 @@
         "for div in soup.findAll('div', attrs={'class': 'lyrics'}):\n",
         "  song_json[\"Lyrics\"].append(div.text.strip().split(\"\\n\"));"
       ],
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yQC5xWjnPKe-",
-        "outputId": "ccee66c4-c6e3-498e-bca5-2fc1a4e24d72",
+        "outputId": "6bf8de97-8adb-477f-ebac-67b49cea3a98",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 806
+          "height": 1000
         }
       },
       "source": [
         "song_json[\"Lyrics\"]"
       ],
-      "execution_count": 43,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[['[Verse 1]',\n",
-              "  \"What doesn't kill you makes you wish you were dead\",\n",
-              "  \"Got a hole in my soul growing deeper and deeper, and I can't take\",\n",
-              "  'One more moment of this silence, the loneliness is haunting me',\n",
-              "  \"And the weight of the world's getting harder to hold up\",\n",
+              "[['[Verse 1: Jeremy McKinnon]',\n",
+              "  'And hey, darling',\n",
+              "  \"I hope you're good tonight\",\n",
+              "  \"And I know you don't feel right when I'm leaving\",\n",
+              "  \"Yeah, I want it, but no, I don't need it\",\n",
+              "  'Tell me something sweet to get me by',\n",
+              "  \"'Cause I can't come back home 'til they're singing\",\n",
               "  '',\n",
-              "  '[Pre-Chorus]',\n",
-              "  'It comes in waves, I close my eyes',\n",
-              "  'Hold my breath and let it bury me',\n",
-              "  \"I'm not okay and it's not alright\",\n",
-              "  \"Won't you drag the lake and bring me home again?\",\n",
+              "  '[Pre-Chorus: Jeremy McKinnon]',\n",
+              "  \"La, la la la, la la la, 'til everyone is singing\",\n",
               "  '',\n",
-              "  '[Chorus]',\n",
-              "  \"Who will fix me now? Dive in when I'm down?\",\n",
-              "  \"Save me from myself, don't let me drown\",\n",
-              "  'Who will make me fight? Drag me out alive?',\n",
-              "  \"Save me from myself, don't let me drown\",\n",
+              "  '[Chorus: Jeremy McKinnon]',\n",
+              "  \"If you can wait 'til I get home\",\n",
+              "  'Then I swear to you that we can make this last, la, la',\n",
+              "  \"If you can wait 'til I get home\",\n",
+              "  'Then I swear, come tomorrow, this will all be in our past',\n",
               "  '',\n",
-              "  '[Verse 2]',\n",
-              "  \"What doesn't destroy you, leaves you broken instead\",\n",
-              "  \"Got a hole in my soul growing deeper and deeper, and I can't take\",\n",
-              "  'One more moment of this silence, the loneliness is haunting me',\n",
-              "  \"And the weight of the world's getting harder to hold up\",\n",
+              "  '[Post-Chorus: Jeremy McKinnon]',\n",
+              "  'Well, it might be for the best',\n",
               "  '',\n",
-              "  '[Pre-Chorus]',\n",
-              "  'It comes in waves, I close my eyes',\n",
-              "  'Hold my breath and let it bury me',\n",
-              "  \"I'm not okay and it's not alright\",\n",
-              "  \"Won't you drag the lake and bring me home again?\",\n",
+              "  '[Verse 2: Sierra Kusterbeck]',\n",
+              "  'And hey, sweetie',\n",
+              "  'Well, I need you here tonight',\n",
+              "  \"And I know that you don't want to be leaving me\",\n",
+              "  \"Yeah, you want it, but I can't help it\",\n",
+              "  \"I just feel complete when you're by my side\",\n",
+              "  \"But I know you can't come home 'til they're singing\",\n",
               "  '',\n",
-              "  '[Chorus]',\n",
-              "  \"Who will fix me now? Dive in when I'm down?\",\n",
-              "  \"Save me from myself, don't let me drown\",\n",
-              "  'Who will make me fight? Drag me out alive?',\n",
-              "  \"Save me from myself, don't let me drown\",\n",
+              "  '[Pre-Chorus: Sierra Kusterbeck, Jeremy McKinnon]',\n",
+              "  \"La, la la la, la la la, 'til everyone is singing\",\n",
+              "  'La, la la la, la la la',\n",
               "  '',\n",
-              "  '[Bridge]',\n",
-              "  \"'Cause you know that I can't do this on my own\",\n",
-              "  \"'Cause you know that I can't do this on my own\",\n",
-              "  \"'Cause you know that I can't do this on my own\",\n",
-              "  \"('Cause you know that I can't do this on my)\",\n",
+              "  '[Chorus: Jeremy McKinnon]',\n",
+              "  \"If you can wait 'til I get home\",\n",
+              "  'Then I swear to you that we can make this last, la, la',\n",
+              "  \"If you can wait 'til I get home\",\n",
+              "  'Then I swear, come tomorrow, this will all be in our past',\n",
               "  '',\n",
-              "  '[Outro]',\n",
-              "  'Who will fix me now?',\n",
-              "  'Who will fix me now?',\n",
-              "  \"Who will fix me now? Dive in when I'm down?\",\n",
-              "  \"Save me from myself, don't let me drown\"]]"
+              "  '[Post-Chorus: Jeremy McKinnon]',\n",
+              "  'Well, it might be for the best',\n",
+              "  '',\n",
+              "  '[Bridge: Jeremy McKinnon, Sierra Kusterbeck, Both]',\n",
+              "  \"You know you can't give me what I need\",\n",
+              "  'And even though you mean so much to me',\n",
+              "  \"I can't wait through everything\",\n",
+              "  'Is this really happening?',\n",
+              "  \"I swear, I'll never be happy again\",\n",
+              "  \"And don't you dare say we can just be friends\",\n",
+              "  \"I'm not some boy that you can sway\",\n",
+              "  \"We knew it'd happen eventually\",\n",
+              "  '',\n",
+              "  '[Outro: Everyone, Jeremy McKinnon]',\n",
+              "  \"La, la la la, la la la, now everybody's singing\",\n",
+              "  \"La, la la la, la la la, now everybody's singing\",\n",
+              "  \"(If you can wait 'til I get home)\",\n",
+              "  \"La, la la la, la la la, now everybody's singing\",\n",
+              "  '(Then I swear we can make this last)',\n",
+              "  \"La, la la la, la la la, now everybody's singing\",\n",
+              "  \"(If you can wait 'til I get home)\",\n",
+              "  \"La, la la la, la la la, now everybody's singing\",\n",
+              "  '(Then I swear we can make this last)',\n",
+              "  \"La, la la la, la la la, now everybody's singing, la...\"]]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 62
         }
       ]
     },
@@ -244,7 +259,7 @@
         "with open(song_json[\"Title\"]+'.json','w') as outfile:\n",
         "  json.dump(song_json, outfile, indent=4, ensure_ascii=False)"
       ],
-      "execution_count": 44,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -265,14 +280,14 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 45,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Ry9so-Z3TAcs",
-        "outputId": "01293ce0-e8d8-44cb-9f88-e58eedffc9ff",
+        "outputId": "750472d4-e5f1-4e0a-c757-48440be7b460",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -281,7 +296,7 @@
       "source": [
         "type(song_json[\"Lyrics\"])"
       ],
-      "execution_count": 46,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +308,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 65
         }
       ]
     },
@@ -305,14 +320,14 @@
       "source": [
         "df = pd.read_json(song_json[\"Title\"] + '.json', orient='records')"
       ],
-      "execution_count": 50,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7PHHWE0SUkqx",
-        "outputId": "9072dfe6-b3bd-45c8-c547-4c8f77102903",
+        "outputId": "65498842-2c34-4644-e585-938d7fbc198d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 77
@@ -321,7 +336,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 52,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,8 +367,8 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>[[Verse 1], What doesn't kill you makes you wi...</td>\n",
-              "      <td>Bring Me The Horizon – Drown Lyrics | Genius L...</td>\n",
+              "      <td>[[Verse 1: Jeremy McKinnon], And hey, darling,...</td>\n",
+              "      <td>A Day To Remember – If It Means a Lot to You L...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -361,13 +376,13 @@
             ],
             "text/plain": [
               "                                              Lyrics                                              Title\n",
-              "0  [[Verse 1], What doesn't kill you makes you wi...  Bring Me The Horizon – Drown Lyrics | Genius L..."
+              "0  [[Verse 1: Jeremy McKinnon], And hey, darling,...  A Day To Remember – If It Means a Lot to You L..."
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 67
         }
       ]
     },
@@ -375,6 +390,91 @@
       "cell_type": "code",
       "metadata": {
         "id": "xDfnnGXZZXa4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WCepd52cfmsY"
+      },
+      "source": [
+        "### Creating a program for appending songs to a dataframe using the logic above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "muPBTNZ0f3ih"
+      },
+      "source": [
+        "import sys\n",
+        "def lyric_catcher():\n",
+        "  \n",
+        "  while True:\n",
+        "    print('Please input a Lyric url')\n",
+        "    scrape = input('Lyric url')\n",
+        "    check = isinstance(scrape, str)\n",
+        "    if check == True:\n",
+        "      print('Adding to dataframe!')\n",
+        "      req = Request(url,headers={'User-Agent': 'Mozilla/5.0'})\n",
+        "      webpage = urlopen(req).read()\n",
+        "      soup = BeautifulSoup(webpage, 'html.parser')\n",
+        "      html = soup.prettify('utf-8')\n",
+        "      song_json = {}\n",
+        "      song_json[\"Lyrics\"] = [];\n",
+        "      for title in soup.findAll('title'):\n",
+        "        song_json[\"Title\"] = title.text.strip()\n",
+        "      for div in soup.findAll('div', attrs={'class': 'lyrics'}):\n",
+        "        song_json[\"Lyrics\"].append(div.text.strip().split(\"\\n\"));\n",
+        "      with open(song_json[\"Title\"]+'.json','w') as outfile:\n",
+        "        json.dump(song_json, outfile, indent=4, ensure_ascii=False)\n",
+        "      df = pd.read_json(song_json[\"Title\"] + '.json', orient='records')\n",
+        "      print(df)\n",
+        "      os.remove(song_json[\"Title\"] + '.json')\n",
+        "    elif scrape is not isinstance(scrape, str):\n",
+        "      break"
+      ],
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FHhtiFdwh4Rl",
+        "outputId": "645ddcdd-3ae6-49d4-810e-87b4716b0887",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        }
+      },
+      "source": [
+        "lyric_catcher()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please input a Lyric url\n",
+            "Lyric urlhttps://genius.com/Bring-me-the-horizon-teardrops-lyrics\n",
+            "Adding to dataframe!\n",
+            "                                              Lyrics                                              Title\n",
+            "0  [[Verse 1: Jeremy McKinnon], And hey, darling,...  A Day To Remember – If It Means a Lot to You L...\n",
+            "Please input a Lyric url\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kQlo-78zh6hh"
       },
       "source": [
         ""
